[PXM-30] 신청자 진행 현황과 승인자 결재함 연결
